--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,14 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+    set('springAiVersion', "1.0.3")
+}
+
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
@@ -49,6 +55,12 @@ dependencies {
 	
 	// Twilio for SMS & WhatsApp
 	implementation 'com.twilio.sdk:twilio:9.14.1'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.ai:spring-ai-bom:${property("springAiVersion")}")
+    }
 }
 
 tasks.named('test') {
