--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,15 @@ logging.level.org.apache.coyote.http11.Http11Processor=WARN
 # Logging for debugging chat integration
 logging.level.com.vijay.User_Master.service.ChatIntegrationService=DEBUG
 logging.level.org.springframework.web.reactive.function.client=DEBUG
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.servlet.content-type=text/html
+
+# Static Resources
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/resources/,classpath:/META-INF/resources/
+spring.web.resources.cache.period=3600
