--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@ plugins {
 group = 'com.vijay'
 version = '0.0.1-SNAPSHOT'
 
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
-}
+// java {
+//	toolchain {
+//		languageVersion = JavaLanguageVersion.of(11)
+//	}
+// }
 
 configurations {
 	compileOnly {
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // Re-enabled for frontend
 	implementation 'org.modelmapper:modelmapper:3.1.1' // Use the latest version available
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
