--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ logging.level.com.vijay.User_Master.exception=ERROR
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=omvijay44@gmail.com
-spring.mail.password=iese qeja fivb nbdt
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
