--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,11 @@ twilio.phone.number=
 twilio.whatsapp.number=
 whatsapp.enabled=true
 
+# Razorpay Payment Gateway Configuration
+razorpay.key.id=rzp_test_your_key_id_here
+razorpay.key.secret=your_secret_key_here
+razorpay.webhook.secret=your_webhook_secret_here
+
 # --- Springdoc OpenAPI configuration ---
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
